<resources>
    <string name="label_all_stickers">Todas figurinhas</string>
    <string name="label_my_packages">Meus pacotes</string>
    <string name="create_package">Criar pacote</string>
    <string name="error_min_stickers">Você precisa selecionar ao menos três stickers</string>
    <string name="error_not_found_stickers">Você ainda não possui figurinhas</string>
    <string name="error_field_name_empty">O campo de nome não pode ficar vazio</string>
    <string name="error_field_author_empty">O campo de autor não pode ficar vazio</string>
    <string name="message_import_stickers">Importe ou adicione e seja feliz</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_add_to_whatsapp">Adicionar ao Whatsapp</string>
    <string name="label_package_name">Nome do pacote</string>
    <string name="label_creator">Criador</string>
    <string name="label_remove">Remover</string>
    <string name="image_description_return">Retornar</string>

    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="more_info_button">More info about sticker pack</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="title_activity_sticker_packs_list">Sticker Packs</string>
    <string name="dot">•</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="title_activity_sticker_pack_info">Info</string>
    <string name="view_webpage">View webpage</string>
    <string name="send_email">Send email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of
        WhatsApp before adding sticker pack
    </string>
    <string name="error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Erro com o pack</string>
    <string name="info_screen_tray_icon">Tray icon</string>
    <string name="details_pack_already_added">Pack de Sticker adicionado ao Whatsapp</string>
    <string name="info_send_email_to_prompt">Send email with</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Não foi possível adicionar o pacote de Sticker. Cheque se você está utilizando a última versão do Whatsapp</string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>

    <!-- Strings related to NewStickerPackActivity -->
    <string name="prompt_name">Name</string>
    <string name="prompt_author">Author</string>
    <string name="create_sticker_pack">Select images</string>
    <string name="create_sticker_button">Create sticker</string>

    <!--Background remover -->
    <string name="intro_magic_title">Automatic background clearing</string>
    <string name="intro_manual_title">Manual background clearing</string>
    <string name="intro_zoom_title">Zooming and Moving the picture</string>
    <string name="intro_magic_description">Use the Magic Wand tool and touch parts of the background you want to erase
    </string>
    <string name="intro_manual_description">Use the Pencil tool to erase the background dragging your finger around the
        screen
    </string>
    <string name="intro_zoom_description">Use the Magnifier tool to Zoom in/out so you can make better cuts</string>
    <string name="intro_label">Quick look</string>
    <string name="image_chooser_message">Choose an image to cut</string>
    <string name="allow_access">Alow Access</string>
    <string name="do_login">Login</string>
    <string name="share_with_your_friends">Share with firends</string>
    <string name="become_premium">Be premium</string>
    <string name="pay_with_gpay">Pay with Google Pay</string>
    <string name="i_dont_have_money">I don\'t have any cash</string>
    <string name="your_sticker_organizer">your sticker organizer</string>
    <string name="become_premium_description">Remove all ads .\n\n You\'ll have access to futures features \n\n It\'s only $ 2,00</string>
    <string name="google_rewards">Google Rewards</string>
    <string name="google_rewards_download">Baixe o Google Rewards e ganhe dinheiro recebendo pesquisas!</string>
    <string name="download">Baixar</string>
    <string name="share_to_friends_message">Organize all your WhatsApp Stickers\n\n Download *Tiker*: https://play.google.com/store/apps/details?id=br.com.tiker</string>
    <string name="tutorial_one">1º Create a new group on WhatsApp \n(the group name should be unique and will be the package name) \n\n2º Add your Stickers \n\n3º Click in more</string>
    <string name="tutorial_image_description">Whatsapp Description</string>
    <string name="error">Erro</string>
    <string name="error_default">There was an error creating the package. But don\'t worry! Our team is already looking at this problem :)</string>
    <string name="error_watch_add">You need to watch the advertisement until the end</string>
    <string name="watch">Watch</string>
    <string name="ok">Ok</string>
    <string name="error_find_stickers">Could not find any Stickers in conversation</string>
    <string name="adding_package">Adding Package</string>
    <string name="info_watch_add">Before adding the package, watch this advertisement to help the project.</string>
    <string name="sticker_pack_indentifies">sticker pack identifier is empty</string>
    <string name="sticker_pack_identifier_cannot_exceed">\"sticker pack identifier cannot exceed \"</string>
    <string name="characters">\" characters\"</string>
    <string name="whatsapp_conversation">\"Conversa do WhatsApp com \"</string>
    <string name="sticker_pack_publisher_is_empty">sticker pack publisher is empty, sticker pack identifier:</string>
    <string name="sticker_pack_exceed">\"sticker pack publisher cannot exceed \"</string>
    <string name="characters_sticker_pack_identifier">\" characters, sticker pack identifier:\"</string>
    <string name="sticker_pack_is_empty">sticker pack name is empty, sticker pack identifier:</string>
    <string name="sticker_pack_name_is_empty">\"sticker pack name cannot exceed \"</string>


</resources>
