<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gPayButton">

        <ImageView
            android:id="@+id/logoTickerContainer"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ticker_logo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/muli_bold"
            android:gravity="center"
            android:text="@string/become_premium"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoTickerContainer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/become_premium_description"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/gPayButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_acent_background"
        android:src="@drawable/googlepay_button_content"
        android:padding="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:fontFamily="@font/muli"
        android:text="@string/become_premium"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/noMoneyBTN"
        tools:layout_editor_absoluteX="24dp"
        android:contentDescription="@string/pay_with_gpay" />


    <Button
        android:id="@+id/noMoneyBTN"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_primary_background_with_corners"
        android:fontFamily="@font/muli_bold"
        android:text="@string/i_dont_have_money"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>